@startuml
enum AccountType {
  YELLOW
  RED
  BLUE
  GREEN
}

class AccountInfo {
  +username: str
  +balance: int
  +account_type: AccountType
  +locked: bool
}

class StorageManager {
  -db_path: str
  -conn
  -connection
  +connect()
  +close()
  +is_user_exist(username): bool
  +get_user_information(username): AccountInfo
  +{static} update_balance(username, updated_balance)
  +{static} update_lock(username, updated_status)
  +delete_subscription(username, subscription_name)
  +delete_account(username)
}

class Logics {
  +{classmethod} connect_user(username): AccountInfo
  +{classmethod} get_balance(user_info): str
  +{classmethod} add_money(user_info, amount): str
  +{classmethod} get_money(user_info, amount): str
  +add_subscription()
  +delete_subscription(user_info, subscription_name)
  +list_subscription()
  +{classmethod} register_user(username): AccountInfo
  +{classmethod} delete_account(user_info)
}

class main {
  +api()
  +main()
}

AccountInfo *-- AccountType : account_type
StorageManager ..> AccountInfo : creates
Logics ..> StorageManager : uses
Logics ..> AccountInfo : uses
main ..> Logics : uses
main ..> StorageManager : init_database()
@enduml
